--- a/css/styles.css
+++ b/css/styles.css
@@ -73,3 +73,9 @@ html{
     font-family: 'Gabriela', serif;
     
   }
+
+  #servicesoverlay{
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
