--- a/css/styles.css
+++ b/css/styles.css
@@ -106,3 +106,22 @@ html{
     padding-top:40px;
     font-family: 'Gabriela', serif;
   }
+
+  .contact{
+    background-image: url('../images/backgrounds/c_image.jpg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+
+  }
+  .title{
+    padding: 6px;
+  }
+  .contact h2{
+    text-align: center;
+    margin-top: 30px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-family: 'Gabriela', serif;
+  }
