--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,21 @@ html{
   .form-control::-webkit-input-placeholder { 
     color: white; 
   }
+
+  #MERGE1{
+    width: 30%;
+    margin-left: 18%;
+    margin-right: 30px;
+  }
+  #MERGE0{
+    width: 30%;
+  }
+  #comment{
+    margin-left: 20%;
+    width: 60%;
+  }
+  button{
+    margin-left: 20%;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+  }
