--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,14 @@ html{
     padding-top: 50%;
     font-family: 'Delius Swash Caps', cursive;
   }
+
+  @media only screen and (max-width: 755px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 16px;
+      padding-top: 20%;
+    }
+    }
+    
