--- a/css/styles.css
+++ b/css/styles.css
@@ -175,18 +175,27 @@ html{
 
   #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
     display: none;
-    color: black;
+    color:white;
     width: 100%;
     height: 100%;
-    background-color:rgba(255, 255, 255, 0.456);
-    position:absolute;
+    background-color:rgba(255, 255, 255, 0.425);
+    position: absolute;
     top: 20px;
     left: 35px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     font-size: 30px;
-    padding-top: 50%;
     font-family: 'Delius Swash Caps', cursive;
+    padding:20px;
+    border:10px solid white;
+    margin:17px;
+    
+    
+   
+    
+    
+   
+     
   }
 
   @media only screen and (max-width: 755px){
